# -.agent

./: .gitignore  .gitmodules  INSTALL.md  README.md  config.yaml  config.yaml.example  main.py  pyproject.toml
knowledge/: structure
mcp/: factory-mcp
skills/: 同事.json
src/coleague/: __init__.py  __main__.py  agent.py  log.py  memory.py  secrets.py
src/coleague/gateway/: __init__.py  feishu.py  feishu_ws.py
src/coleague/knowledge/: __init__.py  loader.py
src/coleague/llm/: __init__.py  glm.py
src/coleague/mcp/: client.py
src/coleague/skills/: __init__.py  loader.py
src/coleague/tui/: __init__.py  app.py
tests/: test_dispatch_tool.py
