[project]
name = "coleague"
version = "0.1.0"
description = "同事.agent - 飞书网关智能体"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "prompt-toolkit>=3.0.0",
    "lark-oapi>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/coleague"]

[tool.hatchling.build.targets.sdist]
include = ["src/coleague", "skills", "config.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
